# golfy

./: README.md  RELEASING.md  deploy.sh  develop.sh  lint.sh  pyproject.toml
golfy/: Large numbers of peptides per pool.ipynb  __init__.py  deconvolution.py  design.py  initialization.py  main.py  optimization.py  solution.py
notebooks/: Analyze design accuracies.ipynb  Check preferred neighbors assignment for golfy 1.5.0.ipynb  Deconvolute This table.ipynb  Deconvolution.ipynb  EM.ipynb  First stab.ipynb  Large numbers of peptides per pool.ipynb  Number of pools and iters for different params.ipynb  Slower second attempt.ipynb  Third swing.ipynb  Untitled.ipynb  designs-96-wells-replicates-2-to-5.csv  designs-96-wells-replicates-6-10.csv
tests/: test_deconvolution.py  test_init.py
