[project]
name = "golfy"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    'Environment :: Console',
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]
version = "0.0.1"  

[tool.setuptools]
packages = ["golfy"]

